Bug Fix
issue with true result in case command was ignored,
closing file to prevent potential blocking on io operation,
true transmitted status if dmesg capturing skipped,
issue with a specified thread dump file,
closing javacore file to prevent potential blocking on io operation